# pfun-cma-model

./: .env.example  .env.template  .envrc  .flake8  .gitignore  .gitmodules  .pylintrc  .terraform.lock.hcl  CHANGELOG.md  Dockerfile  Makefile  Makefile.api  NOTES.md  README.md  app.py  app.yaml  bucket-policy.json  build-local.tf  cloudbuild.yml  conda-lock.yml  cookies.txt  deploy-local-k8s.tf  deploy-to-eks.tf  docker-compose.yaml  environment.yaml  environment.yml  flake.nix  index.html  install.sh  main.tf  meson.build  meson_options.txt  mypy.ini  new-version.sh  openapi.json  package-lock.json  package.json  packaged.yaml  pfun-cma-model.code-workspace  pfun-cma-model.dockerignore  (+16 more)
.chalice/: config.json  policy-dev.json
.chalice/deployed/: dev.json
.devcontainer/: devcontainer.json
.github/workflows/: ai_codereviewer.yml  chalice_deploy.yml  main.yml  python_ci.yml  terraform_cicd.yml
app/: auth.py  main.py
app/engine/: calc.py  cma_sleepwake.py  data_utils.py
chalicelib/: openapi.json
chalicelib/engine/: bounds.py  calc.py  cma_model_params.py  cma_sleepwake.py  data_utils.py  fit.py
chalicelib/www/: apigClient.js  app.js  index.html
cma-model/: main.py
cma-model/engine/: cma_sleepwake.py
docker/: Dockerfile  pfun-cma-model.Dockerfile  pfun-cma-model.dockerignore
embed/: embed.py  requirements.txt  sample-openai-embeddings-api.py
embed/src/: cli.py  embed.py
examples/: BoundedPFunCMAModelParams.py  cma-tuning-ui.py  dexcom-api.py  index.html  pfun-google-ai-studio--text.py  pfun-google-ai-studio.py  pfun-health-hub-app.js  ui.py
examples/data/: sample_user.json  valid_data.parquet
examples/notebooks/: PFunCmaStreamTubeFigure.ipynb  cma-model-modular-demos.ipynb  cma-model-tuning.ipynb  dexcom-api-wrapper.ipynb  pfun-health-network-graph.ipynb  plot-raw-glucose-data.ipynb  plot-risk-mosaic.ipynb  pydantic-json-serializable.ipynb  visualize-generated-scenarios.ipynb
examples/output/: fit_result.json
frontend/: app.py
frontend/chalicelib/: utils.py
generated_clients/dexcom-client/: README.md  pyproject.toml  setup.py
generated_clients/fastapi-dexcom-client/: README.md  docker-compose.yaml  openapi.yaml  requirements.txt  setup.cfg
generated_clients/fastapi-dexcom-client/.openapi-generator/: FILES
generated_clients/fastapi-dexcom-client/src/openapi_server/: main.py
generated_clients/fastapi-dexcom-client/src/openapi_server/apis/: default_api.py  default_api_base.py
generated_clients/fastapi-dexcom-client/src/openapi_server/models/: alert_record.py  calibration_record.py  data_range_moment.py  egv_record.py  exchange_authorization_code200_response.py  get_data_range200_response.py  get_data_range200_response_calibrations.py  get_devices_v3200_response_inner.py  get_events_v3200_response_inner.py
generated_clients/fastapi-dexcom-client/tests/: test_default_api.py
generated_clients/html-dexcom-client/: index.html
generated_clients/html2-dexcom-client/: index.html
generated_clients/pfun-cma-model-client/: README.md  pyproject.toml  setup.py
infrastructure/: app.py  cdk.context.json  requirements.txt
infrastructure/cdk.out/: PFunCMAEndpointDistribution.assets.json  PFunCMAEndpointDistribution.template.json  PFunCMAGenerateSDK.assets.json  PFunCMAGenerateSDK.template.json  PFunCMAModelChaliceApp.assets.json  PFunCMAModelChaliceApp.template.json  PFunCMAModelPipeline.assets.json  PFunCMAModelPipeline.template.json  PFunCMAModelPipeline60AA5A23.dot  PFunCMAModelPipelineStack.assets.json  PFunCMAModelPipelineStack.template.json  PFunCMAModelPipelineStackPipelineF9ED7276.dot  manifest.json  packaged.yaml  pfun-cma-model.assets.json  pfun-cma-model.template.json  tree.json
infrastructure/stacks/: appstage.py  chaliceapp.py  cloudfrontapp.py  generatesdkapp.py  pfuncmamodelpipeline.py
jules-scratch/verification/: verify_fluid_demo.py
packaged/: sam-packaged.yaml  sam.json
path_helper/: path_helper.py
pfun-cma-mcp-server/: .env.example  Dockerfile  package-lock.json  package.json
pfun-cma-mcp-server/src/: index.ts
pfun-cma-model-embed/: requirements.txt  sample-openai-embeddings-api.py
pfun-cma-model-reheater/: Dockerfile  Makefile  app.py
pfun-cma-model-reheater/.chalice/: config.json
pfun-cma-model/.chalice/: config.json
pfun_blender/: planets.blend  planets.blend1
pfun_cma_model/: __init__.py  app.py  cli.py  config.py  data.py  dexcom.py  llm.py  main.py  middleware.py  secrets.py  websockets.py
pfun_cma_model/auth-dexcom/: app.py
pfun_cma_model/dependencies/: app.py  requirements-dev.txt  requirements.txt
pfun_cma_model/dexcom-api/: openapi.json  utils.py
pfun_cma_model/dexcom_api/: api.py  models.py  utils.py
pfun_cma_model/embed/: __init__.py  requirements.txt
pfun_cma_model/engine/: bounds.py  cma.py  cma_model_params.py  cma_plot.py  data_utils.py  fit.py
pfun_cma_model/frontend/: app.py  auth0-fetch-user.js
pfun_cma_model/llm/: __init__.py  agent.py  context.py  gen_summary.py  gradio-iface.py  gradio_iface.py  llm.py
pfun_common/: config.py  plot.py  utils.py
reheater/: requirements.txt
results/: cma_paramgrid.feather  fit_result.json
runtime/: Dockerfile  Makefile  __init_.py  app.py  assume-role-policy.json  docker-compose.yaml  gateway-assume-role-policy.json  openapi.json  requirements-dev.txt  requirements.txt  route53-alias-record-dev.json  route53-alias-record.json
scripts/: build_backend.py  build_minpack.py  connect-opensearch-tunnel.sh  create-venv.sh  deploy.sh  deploy_chalice.sh  docker_build.sh  extract-sdk.py  fix-lambda-layer-version.py  full-rebuild.sh  generate-sdk.sh  inject-secrets-env.sh  install-llvmlite.sh  install_minpack.sh  new-version.sh  openapi-generate-dexcom.sh  pkg_script.sh  prepare-container.sh  reinit-minpack-submodule.sh  sample-endpoint.sh  sample-local-endpoint.sh  serve_dev.sh  setup-api.sh
sgpt_prompts/: 00-initial-exploration.md
src/: calc.c  calc.cc  calc.cpp  main.cc  main.cpp
subprojects/: minpack.wrap
tests/: test_app.py  test_cma_model_params.py  test_cma_sleepwake.py  test_data_utils.py  test_fit_model.py
(+329 files in other folders)
