[tool.poetry]
name = "pfun-cma-model"
version = "0.2.2"
description = "backend for pfun_cma_model"
authors = ["Robbie Capps <rocapp@gmail.com>"]
readme = "README.md"
packages = [{include = "pfun_cma_model"}]

[tool.poetry.dependencies]
python = "~3.10"
numba = "^0.58.0"
numpy = ">=1.21,<1.26"
pandas = "^2.1.1"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
opensearch-py = "^2.3.1"
pydantic = "2.4.2"
click = "^8.1.7"
paramiko = "^3.3.1"
pfun_path_helper = "^0.0.4"
boto3 = "^1.28.57"
botocore = "^1.31.57"
jinja2 = "^3.1.2"
fastapi = "^0.104.0"
transformers = "^4.34.1"
gunicorn = "^21.2.0"
PyYAML = "^6.0.1"
gradio = "^3.50.2"
plotly = "^5.18.0"
graphql-core = "^3.2.3"
torch = "^2.1.0"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
click = "^8.1.7"
pytest = "^6.0"
ipykernel = "^6.25.2"
ipython = "^8.16.1"
meson = "^1.2.2"
zappa = "^0.58.0"

[tool.poetry.scripts]
build-minpack = "pfun_cma_model.runtime.scripts.build_minpack:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
