[tool.poetry]
name = "pfun-cma-model"
version = "0.3.1a1"
description = "backend for pfun_cma_model"
authors = ["Robbie Capps <rocapp@gmail.com>"]
readme = "README.md"
repository = "https://github.com/rocapp/pfun-cma-model"
packages = [{include = "pfun_cma_model"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numba = "^0.58.0"
pandas = "^2.1.1"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
pydantic = "2.4.2"
click = "^8.1.7"
paramiko = "^3.3.1"
pfun_path_helper = ">=0.1.0"
boto3 = "^1.28.57"
botocore = "^1.31.57"
jinja2 = "^3.1.2"
fastapi = "^0.104.1"
gunicorn = "^21.2.0"
PyYAML = "^6.0.1"
plotly = "^5.18.0"
graphql-core = "^3.2.3"
scikit-learn = "^1.3.2"
pfun-common = {git = "https://github.com/rocapp/pfun-common.git"}
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
click = "^8.1.7"
pytest = "^6.0"
ipykernel = "^6.25.2"
ipython = "^8.16.1"
meson = "^1.2.2"
zappa = "^0.58.0"

[tool.poetry.group.optional.dependencies]
pfun-dexcom-api = {git = "https://github.com/rocapp/pfun-dexcom-api.git"}
pfun-data = {git = "https://github.com/rocapp/pfun-data.git"}

[tool.poetry.scripts]
build-minpack = "scripts.build_minpack:main"
pfun-cma-model = "pfun_cma_model.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
