[metadata]
name = openapi_server
version = v3
description = This API provides access to Dexcom continuous glucose monitoring data for authorized users.
long_description = file: README.md
keywords = OpenAPI Dexcom Developer API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
